--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
+configparser==5.0.2
+cycler==0.10.0
 imap-tools==0.38.1
+kiwisolver==1.3.1
+lxml==4.6.2
+matplotlib==3.3.4
+numpy==1.20.1
+Pillow==8.1.2
+pyparsing==2.4.7
+python-dateutil==2.8.1
+six==1.15.0
+soupsieve==2.2
+wordcloud==1.8.1
